// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should not render component when is not open 1`] = `
Array [
  ".dialog-0-2-1 {
  top: 50%;
  left: 50%;
  z-index: 1300;
  position: fixed;
  transform: translate(-50%, -50%);
  box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
  max-height: 70%;
  overflow-y: auto;
  border-radius: 4px;
  flex-direction: column;
  background-color: #ffffff;
}
.overlay-0-2-2 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.56;
  z-index: 1299;
  position: fixed;
  background: #000000;
}
.dialog-d0-0-2-3 {
  display: none;
  width: 90vw;
}
.overlay-d1-0-2-4 {
  display: none;
}",
  <div />,
]
`;

exports[`Dialog should render correctly the divider at DialogBody 1`] = `
Array [
  ".sharedRippleEffect-0-2-18 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-19 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-19:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-19:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-20 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-21 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-22 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-23 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-24 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-24:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-27 {
    animation: keyframes-ripple-0-2-23 300ms;
  }
  .button-0-2-12 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-12:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-12:hover:not([disabled]) {  }
  .button-0-2-12:focus:not([disabled]) {  }
  .labelContainer-0-2-13 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-14 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-15 {
    background-color: #f4ab34;
    border: 1px solid #FFFFFF00;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-15:disabled {
    background-color: #bbbbbb;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-15:hover:not([disabled]) {
    background-color: #cd902c;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .button-d0-0-2-15:focus:not([disabled]) {
    background-color: #A67423;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-16 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-17 {  }
  .dialog-0-2-1 {
    top: 50%;
    left: 50%;
    z-index: 1300;
    position: fixed;
    transform: translate(-50%, -50%);
    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
    max-height: 70%;
    overflow-y: auto;
    border-radius: 4px;
    flex-direction: column;
    background-color: #ffffff;
  }
  .overlay-0-2-2 {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.56;
    z-index: 1299;
    position: fixed;
    background: #000000;
  }
  .dialog-d0-0-2-3 {
    display: flex;
    width: 536px;
  }
  .overlay-d1-0-2-4 {  }
  .divider-0-2-8 {
    border: 0;
    height: 1px;
    margin-top: 0;
    margin-bottom: 0;
    background-color: #bbbbbb;
  }
  .divider-d0-0-2-9 {
    margin-right: 0;
    margin-left: 0;
  }
  .divider-d1-0-2-10 {
    margin-right: 0;
    margin-left: 0;
  }
  .content-0-2-7 {
    flex: 1 1 auto;
    color: #333333;
    padding: 16px;
    position: relative;
    font-size: 16px;
    overflow-y: auto;
    font-family: Roboto, Arial;
    line-height: 1.5;
    letter-spacing: 0.51px;
  }
  .header-0-2-5 {
    display: flex;
    padding: 16px;
    align-items: center;
    flex-shrink: 0;
    justify-content: space-between;
  }
  .title-0-2-6 {
    color: #333333;
    margin: 0;
    font-size: 20px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.24px;
  }
  .footer-0-2-11 {
    gap: 16px;
    display: flex;
    padding: 16px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
  }",
  <div>
    <div
      data-testid="ds-portal"
    >
      <div
        aria-describedby="description"
        aria-labelledby="title"
        aria-modal="true"
        class=" dialog-0-2-1 dialog-d0-0-2-3"
        role="dialog"
        tabindex="0"
      >
        <div
          class=" header-0-2-5"
        >
          <h2
            class="title-0-2-6"
            id="title"
          >
            Example
          </h2>
        </div>
        <hr
          class=" divider-0-2-8 divider-d0-0-2-9"
        />
        <div
          class=" content-0-2-7"
        >
          <p
            id="description"
          >
            something on the body
          </p>
        </div>
        <hr
          class=" divider-0-2-8 divider-d1-0-2-10"
        />
        <div
          class=" footer-0-2-11"
        >
          <div
            class="wrapper-0-2-19 wrapper-d0-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-21 rippleContainer-d2-0-2-26"
            >
              <div
                class="ripple-0-2-20 ripple-d1-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-12 button-d0-0-2-15"
              type="button"
            >
              <div
                class="labelContainer-0-2-13 labelContainer-d1-0-2-16"
              >
                <span
                  class="label-0-2-14 label-d2-0-2-17"
                >
                  button
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="overlay-0-2-2 overlay-d1-0-2-4"
      />
    </div>
  </div>,
]
`;

exports[`Dialog should render correctly when window is smaller than component width 1`] = `
Array [
  ".sharedRippleEffect-0-2-18 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-19 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-19:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-19:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-20 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-21 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-22 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-23 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-24 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-24:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-27 {
    animation: keyframes-ripple-0-2-23 300ms;
  }
  .button-0-2-12 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-12:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-12:hover:not([disabled]) {  }
  .button-0-2-12:focus:not([disabled]) {  }
  .labelContainer-0-2-13 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-14 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-15 {
    background-color: #f4ab34;
    border: 1px solid #FFFFFF00;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-15:disabled {
    background-color: #bbbbbb;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-15:hover:not([disabled]) {
    background-color: #cd902c;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .button-d0-0-2-15:focus:not([disabled]) {
    background-color: #A67423;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-16 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-17 {  }
  .dialog-0-2-1 {
    top: 50%;
    left: 50%;
    z-index: 1300;
    position: fixed;
    transform: translate(-50%, -50%);
    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
    max-height: 70%;
    overflow-y: auto;
    border-radius: 4px;
    flex-direction: column;
    background-color: #ffffff;
  }
  .overlay-0-2-2 {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.56;
    z-index: 1299;
    position: fixed;
    background: #000000;
  }
  .dialog-d0-0-2-3 {
    display: flex;
    width: 90vw;
  }
  .overlay-d1-0-2-4 {  }
  .divider-0-2-8 {
    border: 0;
    height: 1px;
    margin-top: 0;
    margin-bottom: 0;
    background-color: #bbbbbb;
  }
  .divider-d0-0-2-9 {
    margin-right: 0;
    margin-left: 0;
  }
  .divider-d1-0-2-10 {
    margin-right: 0;
    margin-left: 0;
  }
  .content-0-2-7 {
    flex: 1 1 auto;
    color: #333333;
    padding: 16px;
    position: relative;
    font-size: 16px;
    overflow-y: auto;
    font-family: Roboto, Arial;
    line-height: 1.5;
    letter-spacing: 0.51px;
  }
  .header-0-2-5 {
    display: flex;
    padding: 16px;
    align-items: center;
    flex-shrink: 0;
    justify-content: space-between;
  }
  .title-0-2-6 {
    color: #333333;
    margin: 0;
    font-size: 20px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.24px;
  }
  .footer-0-2-11 {
    gap: 16px;
    display: flex;
    padding: 16px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
  }",
  <div>
    <div
      data-testid="ds-portal"
    >
      <div
        aria-describedby="description"
        aria-labelledby="title"
        aria-modal="true"
        class=" dialog-0-2-1 dialog-d0-0-2-3"
        role="dialog"
        tabindex="0"
      >
        <div
          class=" header-0-2-5"
        >
          <h2
            class="title-0-2-6"
            id="title"
          >
            Example
          </h2>
        </div>
        <hr
          class=" divider-0-2-8 divider-d0-0-2-9"
        />
        <div
          class=" content-0-2-7"
        >
          <p
            id="description"
          >
            something on the body
          </p>
        </div>
        <hr
          class=" divider-0-2-8 divider-d1-0-2-10"
        />
        <div
          class=" footer-0-2-11"
        >
          <div
            class="wrapper-0-2-19 wrapper-d0-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-21 rippleContainer-d2-0-2-26"
            >
              <div
                class="ripple-0-2-20 ripple-d1-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-12 button-d0-0-2-15"
              type="button"
            >
              <div
                class="labelContainer-0-2-13 labelContainer-d1-0-2-16"
              >
                <span
                  class="label-0-2-14 label-d2-0-2-17"
                >
                  button
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="overlay-0-2-2 overlay-d1-0-2-4"
      />
    </div>
  </div>,
]
`;

exports[`Dialog should render correctly with DialogBody and DialogFooter 1`] = `
Array [
  ".sharedRippleEffect-0-2-13 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-14 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-14:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-14:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-15 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-16 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-17 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-18 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-19 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-19:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-19:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-20 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-21 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-22 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .button-0-2-7 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-7:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-7:hover:not([disabled]) {  }
  .button-0-2-7:focus:not([disabled]) {  }
  .labelContainer-0-2-8 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-9 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-10 {
    background-color: #f4ab34;
    border: 1px solid #FFFFFF00;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-10:disabled {
    background-color: #bbbbbb;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-10:hover:not([disabled]) {
    background-color: #cd902c;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .button-d0-0-2-10:focus:not([disabled]) {
    background-color: #A67423;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-11 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-12 {  }
  .dialog-0-2-1 {
    top: 50%;
    left: 50%;
    z-index: 1300;
    position: fixed;
    transform: translate(-50%, -50%);
    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
    max-height: 70%;
    overflow-y: auto;
    border-radius: 4px;
    flex-direction: column;
    background-color: #ffffff;
  }
  .overlay-0-2-2 {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.56;
    z-index: 1299;
    position: fixed;
    background: #000000;
  }
  .dialog-d0-0-2-3 {
    display: flex;
    width: 536px;
  }
  .overlay-d1-0-2-4 {  }
  .content-0-2-5 {
    flex: 1 1 auto;
    color: #333333;
    padding: 16px;
    position: relative;
    font-size: 16px;
    overflow-y: auto;
    font-family: Roboto, Arial;
    line-height: 1.5;
    letter-spacing: 0.51px;
  }
  .footer-0-2-6 {
    gap: 16px;
    display: flex;
    padding: 16px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
  }",
  <div>
    <div
      data-testid="ds-portal"
    >
      <div
        aria-describedby="description"
        aria-modal="true"
        class=" dialog-0-2-1 dialog-d0-0-2-3"
        role="alertdialog"
        tabindex="0"
      >
        <div
          class=" content-0-2-5"
        >
          <p
            id="description"
          >
            something on the body
          </p>
        </div>
        <div
          class=" footer-0-2-6"
        >
          <div
            class="wrapper-0-2-14 wrapper-d0-0-2-19"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d2-0-2-21"
            >
              <div
                class="ripple-0-2-15 ripple-d1-0-2-20 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-7 button-d0-0-2-10"
              type="button"
            >
              <div
                class="labelContainer-0-2-8 labelContainer-d1-0-2-11"
              >
                <span
                  class="label-0-2-9 label-d2-0-2-12"
                >
                  button
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="overlay-0-2-2 overlay-d1-0-2-4"
      />
    </div>
  </div>,
]
`;

exports[`Dialog should render correctly with DialogHeader, DialogBody and DialogFooter 1`] = `
Array [
  ".sharedRippleEffect-0-2-15 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-16 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-16:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-16:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-17 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-18 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-19 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-20 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-21 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-21:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-21:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-22 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-23 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-24 {
    animation: keyframes-ripple-0-2-20 300ms;
  }
  .button-0-2-9 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-9:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-9:hover:not([disabled]) {  }
  .button-0-2-9:focus:not([disabled]) {  }
  .labelContainer-0-2-10 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-11 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-12 {
    background-color: #f4ab34;
    border: 1px solid #FFFFFF00;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-12:disabled {
    background-color: #bbbbbb;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-12:hover:not([disabled]) {
    background-color: #cd902c;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .button-d0-0-2-12:focus:not([disabled]) {
    background-color: #A67423;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-13 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-14 {  }
  .dialog-0-2-1 {
    top: 50%;
    left: 50%;
    z-index: 1300;
    position: fixed;
    transform: translate(-50%, -50%);
    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
    max-height: 70%;
    overflow-y: auto;
    border-radius: 4px;
    flex-direction: column;
    background-color: #ffffff;
  }
  .overlay-0-2-2 {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.56;
    z-index: 1299;
    position: fixed;
    background: #000000;
  }
  .dialog-d0-0-2-3 {
    display: flex;
    width: 536px;
  }
  .overlay-d1-0-2-4 {  }
  .content-0-2-7 {
    flex: 1 1 auto;
    color: #333333;
    padding: 16px;
    position: relative;
    font-size: 16px;
    overflow-y: auto;
    font-family: Roboto, Arial;
    line-height: 1.5;
    letter-spacing: 0.51px;
  }
  .header-0-2-5 {
    display: flex;
    padding: 16px;
    align-items: center;
    flex-shrink: 0;
    justify-content: space-between;
  }
  .title-0-2-6 {
    color: #333333;
    margin: 0;
    font-size: 20px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.24px;
  }
  .footer-0-2-8 {
    gap: 16px;
    display: flex;
    padding: 16px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
  }",
  <div>
    <div
      data-testid="ds-portal"
    >
      <div
        aria-describedby="description"
        aria-labelledby="title"
        aria-modal="true"
        class=" dialog-0-2-1 dialog-d0-0-2-3"
        role="dialog"
        tabindex="0"
      >
        <div
          class=" header-0-2-5"
        >
          <h2
            class="title-0-2-6"
            id="title"
          >
            Example
          </h2>
        </div>
        <div
          class=" content-0-2-7"
        >
          <p
            id="description"
          >
            something on the body
          </p>
        </div>
        <div
          class=" footer-0-2-8"
        >
          <div
            class="wrapper-0-2-16 wrapper-d0-0-2-21"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-18 rippleContainer-d2-0-2-23"
            >
              <div
                class="ripple-0-2-17 ripple-d1-0-2-22 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-9 button-d0-0-2-12"
              type="button"
            >
              <div
                class="labelContainer-0-2-10 labelContainer-d1-0-2-13"
              >
                <span
                  class="label-0-2-11 label-d2-0-2-14"
                >
                  button
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="overlay-0-2-2 overlay-d1-0-2-4"
      />
    </div>
  </div>,
]
`;

exports[`Dialog should render correctly with the given size 1`] = `
Array [
  ".sharedRippleEffect-0-2-18 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-19 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-19:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-19:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-20 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-21 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-22 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-23 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-24 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-24:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-24:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-25 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-26 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-27 {
    animation: keyframes-ripple-0-2-23 300ms;
  }
  .button-0-2-12 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-12:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-12:hover:not([disabled]) {  }
  .button-0-2-12:focus:not([disabled]) {  }
  .labelContainer-0-2-13 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-14 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-15 {
    background-color: #f4ab34;
    border: 1px solid #FFFFFF00;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-15:disabled {
    background-color: #bbbbbb;
    border: 1px solid #FFFFFF00;
    color: #333333;
  }
  .button-d0-0-2-15:hover:not([disabled]) {
    background-color: #cd902c;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .button-d0-0-2-15:focus:not([disabled]) {
    background-color: #A67423;
    border: 1px solid #FFFFFF00;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-16 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-17 {  }
  .dialog-0-2-1 {
    top: 50%;
    left: 50%;
    z-index: 1300;
    position: fixed;
    transform: translate(-50%, -50%);
    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
    max-height: 70%;
    overflow-y: auto;
    border-radius: 4px;
    flex-direction: column;
    background-color: #ffffff;
  }
  .overlay-0-2-2 {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.56;
    z-index: 1299;
    position: fixed;
    background: #000000;
  }
  .dialog-d0-0-2-3 {
    display: flex;
    width: 816px;
  }
  .overlay-d1-0-2-4 {  }
  .divider-0-2-8 {
    border: 0;
    height: 1px;
    margin-top: 0;
    margin-bottom: 0;
    background-color: #bbbbbb;
  }
  .divider-d0-0-2-9 {
    margin-right: 0;
    margin-left: 0;
  }
  .divider-d1-0-2-10 {
    margin-right: 0;
    margin-left: 0;
  }
  .content-0-2-7 {
    flex: 1 1 auto;
    color: #333333;
    padding: 16px;
    position: relative;
    font-size: 16px;
    overflow-y: auto;
    font-family: Roboto, Arial;
    line-height: 1.5;
    letter-spacing: 0.51px;
  }
  .header-0-2-5 {
    display: flex;
    padding: 16px;
    align-items: center;
    flex-shrink: 0;
    justify-content: space-between;
  }
  .title-0-2-6 {
    color: #333333;
    margin: 0;
    font-size: 20px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.24px;
  }
  .footer-0-2-11 {
    gap: 16px;
    display: flex;
    padding: 16px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
  }",
  <div>
    <div
      data-testid="ds-portal"
    >
      <div
        aria-describedby="description"
        aria-labelledby="title"
        aria-modal="true"
        class=" dialog-0-2-1 dialog-d0-0-2-3"
        role="dialog"
        tabindex="0"
      >
        <div
          class=" header-0-2-5"
        >
          <h2
            class="title-0-2-6"
            id="title"
          >
            Example
          </h2>
        </div>
        <hr
          class=" divider-0-2-8 divider-d0-0-2-9"
        />
        <div
          class=" content-0-2-7"
        >
          <p
            id="description"
          >
            something on the body
          </p>
        </div>
        <hr
          class=" divider-0-2-8 divider-d1-0-2-10"
        />
        <div
          class=" footer-0-2-11"
        >
          <div
            class="wrapper-0-2-19 wrapper-d0-0-2-24"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-21 rippleContainer-d2-0-2-26"
            >
              <div
                class="ripple-0-2-20 ripple-d1-0-2-25 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="button-0-2-12 button-d0-0-2-15"
              type="button"
            >
              <div
                class="labelContainer-0-2-13 labelContainer-d1-0-2-16"
              >
                <span
                  class="label-0-2-14 label-d2-0-2-17"
                >
                  button
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="overlay-0-2-2 overlay-d1-0-2-4"
      />
    </div>
  </div>,
]
`;
